--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -556,47 +556,162 @@
 	#TRAIT_TEC_GENE_MALLEABLE_EFFECT:0 "Reduces the cost of §HStandard Traits§! by §G1§!, down to §Y0§!."
 
  # --------------- T2
-	#trait_pc_tec_gene_preference
-	trait_pc_tec_gene_preference:0 "$trait_tec_gene_perfection$"
-	trait_pc_tec_gene_preference_desc:0 "$trait_tec_gene_perfection_desc$"
+	# Main
+		trait_tec_gene_main_1:0 ""
+		trait_tec_gene_main_1_desc:0 ""
+		TRAIT_TEC_GENE_MAIN_1_EFFECT:0 ""
 
-	trait_tec_gene_perfection:0 "Genetic Perfection"
-	trait_tec_gene_perfection_desc:0 "§LThis species has a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
-	TRAIT_TEC_GENE_PERFECTION_EFFECT:0 "§YThis trait generates special leader traits for members of this species.\nLeaders are §YImmortal§!.§!"
+		trait_tec_gene_main_2:0 ""
+		trait_tec_gene_main_2_desc:0 ""
+		TRAIT_TEC_GENE_MAIN_2_EFFECT:0 ""
 
-	trait_tec_gene_brain:0 "Genius"
-	trait_tec_gene_brain_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only them can understand.§!"
-	TRAIT_TEC_GENE_BRAIN_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! of this species.§!"
-	# Note: everyone
-	leader_trait_tec_gene_brain:0 "$trait_tec_gene_brain$"
-	leader_trait_tec_gene_brain_desc:0 "§LThis leader has a unparalleled intellect and mental prowess, improving their abilities and the performance of its tasks at extreme efficiency.§!"
+		trait_tec_gene_main_3:0 ""
+		trait_tec_gene_main_3_desc:0 ""
+		TRAIT_TEC_GENE_MAIN_3_EFFECT:0 ""
+	# /
 
-	trait_tec_gene_fertile:0 "Fecund"
-	trait_tec_gene_fertile_desc:0 "§LThis species is radically altered to be naturally and artificially fertile and adapted to close social behaviors, feeling comfortable and developing close bounds being in proximity of other members of their own.§!"
-	TRAIT_TEC_GENE_FERTILE_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! of this species.§!"
-	# Note: Ruler - Governor
-	leader_trait_tec_gene_fertile:0 "$trait_tec_gene_fertile$"
-	leader_trait_tec_gene_fertile_desc:0 "§LFocused on fertility and population growth, this leader ensures the prosperity of its species.§!"
+	# Brain
+		trait_tec_gene_research_1:0 ""
+		trait_tec_gene_research_1_desc:0 ""
+		TRAIT_TEC_GENE_RESEARCH_1_EFFECT:0 ""
 
-	trait_tec_gene_will:0 "Resolved"
-	trait_tec_gene_will_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
-	# Note: Ruler - Governor
-	leader_trait_tec_gene_will:0 "$trait_tec_gene_will$"
-	leader_trait_tec_gene_will_desc:0 "§LMental hardness of this leader ensures the best possible development of its brethren, its society and itself overall.§!"
+		trait_tec_gene_research_2:0 ""
+		trait_tec_gene_research_2_desc:0 ""
+		TRAIT_TEC_GENE_RESEARCH_2_EFFECT:0 ""
 
-	trait_tec_gene_robust:0 "Impervious"
-	trait_tec_gene_robust_desc:0 "§LNewly and additional Bio-Optimized organs aport this species with enhanced capabilities of survival, of resisting hazards and completing any possible (and near impossible) task.§!"
-	TRAIT_TEC_GENE_ROBUST_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! and §YGenerals§! of this species.§!"
-	# Note: Governor - General - Admiral
-	leader_trait_tec_gene_robust:0 "$trait_tec_gene_robust$"
-	leader_trait_tec_gene_robust_desc:0 "§LNear immortal to wounds,, illness or any natural cause, this leader effectuates its duty in the same way; preserving everything, anything, forever via minimization of possible losses and maximization of potential outcomes.§!"
+		trait_tec_gene_research_3:0 ""
+		trait_tec_gene_research_3_desc:0 ""
+		TRAIT_TEC_GENE_RESEARCH_3_EFFECT:0 ""
 
-	trait_tec_gene_audacious:0 "Audacious"
-	trait_tec_gene_audacious_desc:0 "§LCreative capacities of this species surpass the expected on perfection, making anything better with meticulous and precise work.§!"
-	TRAIT_TEC_GENE_AUDACIOUS_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! and §YScientists§! of this species.§!"
-	# Note: Governor - General - Admiral
-	leader_trait_tec_gene_audacious:0 "$trait_tec_gene_audacious$"
-	leader_trait_tec_gene_audacious_desc:0 "§LWith extreme strength and mental haste, this leader command its kind in the same way; in an aggressive and effective way, minimizing time in battle while maximizing the damage done to the enemy, in all fields.§!"
+		#leader_trait_tec_gene_research:0 ""
+		#leader_trait_tec_gene_research_desc:0 "§L.§!"
+	# /
+
+	# Unity
+		trait_tec_gene_unity_1:0 ""
+		trait_tec_gene_unity_1_desc:0 ""
+		TRAIT_TEC_GENE_UNITY_1_EFFECT:0 ""
+
+		trait_tec_gene_unity_2:0 ""
+		trait_tec_gene_unity_2_desc:0 ""
+		TRAIT_TEC_GENE_UNITY_2_EFFECT:0 ""
+
+		trait_tec_gene_unity_3:0 ""
+		trait_tec_gene_unity_3_desc:0 ""
+		TRAIT_TEC_GENE_UNITY_3_EFFECT:0 ""
+
+		#leader_trait_tec_gene_unity:0 ""
+		#leader_trait_tec_gene_unity_desc:0 "§L.§!"
+	# /
+
+	# Fertility
+		trait_tec_gene_fertile_1:0 ""
+		trait_tec_gene_fertile_1_desc:0 ""
+		TRAIT_TEC_GENE_FERTILE_1_EFFECT:0 ""
+
+		trait_tec_gene_fertile_2:0 ""
+		trait_tec_gene_fertile_2_desc:0 ""
+		TRAIT_TEC_GENE_FERTILE_2_EFFECT:0 ""
+
+		trait_tec_gene_fertile_3:0 ""
+		trait_tec_gene_fertile_3_desc:0 ""
+		TRAIT_TEC_GENE_FERTILE_3_EFFECT:0 ""
+
+		#leader_trait_tec_gene_fertile:0 ""
+		#leader_trait_tec_gene_fertile_desc:0 "§L.§!"
+	# /
+
+	# Robust
+		trait_tec_gene_robust_1:0 ""
+		trait_tec_gene_robust_1_desc:0 ""
+		TRAIT_TEC_GENE_ROBUST_1_EFFECT:0 ""
+
+		trait_tec_gene_robust_2:0 ""
+		trait_tec_gene_robust_2_desc:0 ""
+		TRAIT_TEC_GENE_ROBUST_2_EFFECT:0 ""
+
+		trait_tec_gene_robust_3:0 ""
+		trait_tec_gene_robust_3_desc:0 ""
+		TRAIT_TEC_GENE_ROBUST_3_EFFECT:0 ""
+
+		#leader_trait_tec_gene_robust:0 ""
+		#leader_trait_tec_gene_robust_desc:0 "§L.§!"
+	# /
+
+	# Audacious
+		trait_tec_gene_audacious_1:0 ""
+		trait_tec_gene_audacious_1_desc:0 ""
+		TRAIT_TEC_GENE_AUDACIOUS_1_EFFECT:0 ""
+
+		trait_tec_gene_audacious_2:0 ""
+		trait_tec_gene_audacious_2_desc:0 ""
+		TRAIT_TEC_GENE_AUDACIOUS_2_EFFECT:0 ""
+
+		trait_tec_gene_audacious_3:0 ""
+		trait_tec_gene_audacious_3_desc:0 ""
+		TRAIT_TEC_GENE_AUDACIOUS_3_EFFECT:0 ""
+
+		#leader_trait_tec_gene_audacious:0 ""
+		#leader_trait_tec_gene_audacious_desc:0 "§L.§!"
+	# /
+
+	# Resequenced
+		# Note: adapted to chosen leviathan
+		#trait_tec_gene_resequenced_leviathan
+		# Note: per archetype
+		#trait_tec_gene_resequenced_latent
+
+		#trait_tec_gene_resequenced_
+
+		#trait_tec_gene_resequenced_
+
+		#trait_tec_gene_resequenced_
+	# /
+
+	# Old traits
+		#trait_pc_tec_gene_preference
+		trait_pc_tec_gene_preference:0 "$trait_tec_gene_perfection$"
+		trait_pc_tec_gene_preference_desc:0 "$trait_tec_gene_perfection_desc$"
+
+		trait_tec_gene_perfection:0 "Genetic Perfection"
+		trait_tec_gene_perfection_desc:0 "§LThis species has a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
+		TRAIT_TEC_GENE_PERFECTION_EFFECT:0 "§YThis trait generates special leader traits for members of this species.\nLeaders are §YImmortal§!.§!"
+
+		trait_tec_gene_brain:0 "Genius"
+		trait_tec_gene_brain_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only them can understand.§!"
+		TRAIT_TEC_GENE_BRAIN_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! of this species.§!"
+		# Note: everyone
+		leader_trait_tec_gene_brain:0 "$trait_tec_gene_brain$"
+		leader_trait_tec_gene_brain_desc:0 "§LThis leader has a unparalleled intellect and mental prowess, improving their abilities and the performance of its tasks at extreme efficiency.§!"
+
+		trait_tec_gene_fertile:0 "Fecund"
+		trait_tec_gene_fertile_desc:0 "§LThis species is radically altered to be naturally and artificially fertile and adapted to close social behaviors, feeling comfortable and developing close bounds being in proximity of other members of their own.§!"
+		TRAIT_TEC_GENE_FERTILE_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! of this species.§!"
+		# Note: Ruler - Governor
+		leader_trait_tec_gene_fertile:0 "$trait_tec_gene_fertile$"
+		leader_trait_tec_gene_fertile_desc:0 "§LFocused on fertility and population growth, this leader ensures the prosperity of its species.§!"
+
+		trait_tec_gene_will:0 "Resolved"
+		trait_tec_gene_will_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
+		# Note: Ruler - Governor
+		leader_trait_tec_gene_will:0 "$trait_tec_gene_will$"
+		leader_trait_tec_gene_will_desc:0 "§LMental hardness of this leader ensures the best possible development of its brethren, its society and itself overall.§!"
+
+		trait_tec_gene_robust:0 "Impervious"
+		trait_tec_gene_robust_desc:0 "§LNewly and additional Bio-Optimized organs aport this species with enhanced capabilities of survival, of resisting hazards and completing any possible (and near impossible) task.§!"
+		TRAIT_TEC_GENE_ROBUST_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! and §YGenerals§! of this species.§!"
+		# Note: Governor - General - Admiral
+		leader_trait_tec_gene_robust:0 "$trait_tec_gene_robust$"
+		leader_trait_tec_gene_robust_desc:0 "§LNear immortal to wounds,, illness or any natural cause, this leader effectuates its duty in the same way; preserving everything, anything, forever via minimization of possible losses and maximization of potential outcomes.§!"
+
+		trait_tec_gene_audacious:0 "Audacious"
+		trait_tec_gene_audacious_desc:0 "§LCreative capacities of this species surpass the expected on perfection, making anything better with meticulous and precise work.§!"
+		TRAIT_TEC_GENE_AUDACIOUS_EFFECT:0 "§YThis trait generates special leader traits for some §YRulers§! and §YScientists§! of this species.§!"
+		# Note: Governor - General - Admiral
+		leader_trait_tec_gene_audacious:0 "$trait_tec_gene_audacious$"
+		leader_trait_tec_gene_audacious_desc:0 "§LWith extreme strength and mental haste, this leader command its kind in the same way; in an aggressive and effective way, minimizing time in battle while maximizing the damage done to the enemy, in all fields.§!"
+	# /
+# /
 
 # ------------------------------------------------- BIOGENICS
 	# xenotransplantation
