protoworld loc fix

--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -765,9 +765,9 @@ l_english:
 	mod_job_tec_depth_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_depth_drone_add£ per $VALUE$ £pop£"
  # /
  # ------------------------------------------------- Protoworlds
-	tec_upgradeable_district_adds_energy:0 "This district can produce additional §Y$tec_loc_energy$§! and benefits from §Y$mod_base_planet_technician$§Y modifiers.\n\n"
-	tec_upgradeable_district_adds_minerals:0 "This district can produce additional §Y$tec_loc_minerals$§! and benefits from §Y$mod_base_planet_miners$§Y modifiers.\n\n"
-	tec_upgradeable_district_adds_food:0 "This district can produce additional §Y$tec_loc_food$§! and benefits from §Y$mod_base_planet_farmers$§Y modifiers..\n\n"
+	tec_upgradeable_district_adds_energy:0 "This district can produce additional §Y$tec_loc_energy$§! and benefits from §Y$mod_base_planet_technician$§! modifiers.\n\n"
+	tec_upgradeable_district_adds_minerals:0 "This district can produce additional §Y$tec_loc_minerals$§! and benefits from §Y$mod_base_planet_miners$§! modifiers.\n\n"
+	tec_upgradeable_district_adds_food:0 "This district can produce additional §Y$tec_loc_food$§! and benefits from §Y$mod_base_planet_farmers$§! modifiers.\n\n"
 
 	tec_protoworld_energy_district:0 "§EContributes towards §HAridification§! of the planet.§!"
 	tec_protoworld_mineral_district:0 "§EContributes towards §BCooling§! of the planet.§!"
