minor typo fixes

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -3122,7 +3122,7 @@ tech_reverse_advanced_dome: " "
 
 # 50%
 	tec_machine_path.10050.name:0 "Reinventing Ourselves"
-	tec_machine_path.10050.desc:0 "There is no major necessity for a proper evolution than a change of perspective; our collective needs a solid reinterpretation of what we are, of who we are, and this will be achieved soon.\nWe are reaching the equator of the new synthetic enhancements we are developing, on the equator of setting a big mark for our future."
+	tec_machine_path.10050.desc:0 "There is no major necessity for a proper evolution than a change of perspective; our collective needs a solid reinterpretation of what we are, of who we are, and this will be achieved soon.\nWe are close to grasp the potential of the new synthetic enhancements we are developing, on the cusp of setting the biggest mark for our future."
 	tec_machine_path.10050.a:0 "A new perspective..."
 	tec_machine_path.10050.a.tooltip:0 ""
 
