--- a/localisation/english/zz_evolved_tech_l_english.yml
+++ b/localisation/english/zz_evolved_tech_l_english.yml
@@ -242,7 +242,7 @@
 	tech_tec_cyberspace_projection:0 "Cyberspace Projection"
 	tech_tec_cyberspace_projection_desc:0 "Access Denied."
 	TECH_UNLOCK_TEC_CYBERSPACE_TITLE:0 "§HUnlocks Feature:§! Energrid Building Compositors"
-	TECH_UNLOCK_TEC_CYBERSPACE_DESC:0 "All buildings and districts have a divided cost of £minerals£§Yminerals§! and £energy£§YEnergy§!"
+	TECH_UNLOCK_TEC_CYBERSPACE_DESC:0 "All buildings and districts have a divided cost of §Y$tec_loc_minerals$§! and §Y$tec_loc_energy$§!"
 
 # ------------------------------------------------- Potential techs
 
