biohive nerf + reduced ascension gestalt stability

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -557,99 +557,99 @@
 
  # --------------- T2
 	# Main
-		trait_tec_gene_main_1:0 ""
-		trait_tec_gene_main_1_desc:0 ""
-		TRAIT_TEC_GENE_MAIN_1_EFFECT:0 ""
+		trait_tec_gene_main_1:0 "§YTailored Genetics§! (§GI§!)"
+		trait_tec_gene_main_1_desc:0 "§LA.§!"
+		trait_tec_gene_main_1_effect:0 "§GEngineered trait§!"
 
-		trait_tec_gene_main_2:0 ""
-		trait_tec_gene_main_2_desc:0 ""
-		TRAIT_TEC_GENE_MAIN_2_EFFECT:0 ""
+		trait_tec_gene_main_2:0 "§YImproved Genetics§! (§YII§!)"
+		trait_tec_gene_main_2_desc:0 "§LB.§!"
+		trait_tec_gene_main_2_effect:0 "§YRecombined trait§!"
 
-		trait_tec_gene_main_3:0 ""
-		trait_tec_gene_main_3_desc:0 ""
-		TRAIT_TEC_GENE_MAIN_3_EFFECT:0 ""
+		trait_tec_gene_main_3:0 "§YGenetic Perfection§! (§HIII§!)"
+		trait_tec_gene_main_3_desc:0 "§LC.§!"
+		trait_tec_gene_main_3_effect:0 "§HPerfected trait§!"
 	# /
 
 	# Brain
-		trait_tec_gene_research_1:0 ""
-		trait_tec_gene_research_1_desc:0 ""
-		TRAIT_TEC_GENE_RESEARCH_1_EFFECT:0 ""
+		trait_tec_gene_research_1:0 "§YGenius§! (§GI§!)"
+		trait_tec_gene_research_1_desc:0 "§LThe intellect of this species is starting to become unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
+		trait_tec_gene_research_1_effect:0 "§GEngineered trait§!"
 
-		trait_tec_gene_research_2:0 ""
-		trait_tec_gene_research_2_desc:0 ""
-		TRAIT_TEC_GENE_RESEARCH_2_EFFECT:0 ""
+		trait_tec_gene_research_2:0 "§YGenius§! (§YII§!)"
+		trait_tec_gene_research_2_desc:0 "§LThe intellect of this species is becoming unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
+		trait_tec_gene_research_2_effect:0 "§YRecombined trait§!"
 
-		trait_tec_gene_research_3:0 ""
-		trait_tec_gene_research_3_desc:0 ""
-		TRAIT_TEC_GENE_RESEARCH_3_EFFECT:0 ""
+		trait_tec_gene_research_3:0 "§YC§! (§HIII§!)"
+		trait_tec_gene_research_3_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only them can understand.§!"
+		trait_tec_gene_research_3_effect:0 "§HPerfected trait§!"
 
 		#leader_trait_tec_gene_research:0 ""
 		#leader_trait_tec_gene_research_desc:0 "§L.§!"
 	# /
 
 	# Unity
-		trait_tec_gene_unity_1:0 ""
+		trait_tec_gene_unity_1:0 "§YA§! (§GI§!)"
 		trait_tec_gene_unity_1_desc:0 ""
-		TRAIT_TEC_GENE_UNITY_1_EFFECT:0 ""
+		trait_tec_gene_unity_1_effect:0 "§GEngineered trait§!"
 
-		trait_tec_gene_unity_2:0 ""
+		trait_tec_gene_unity_2:0 "§YB§! (§YII§!)"
 		trait_tec_gene_unity_2_desc:0 ""
-		TRAIT_TEC_GENE_UNITY_2_EFFECT:0 ""
+		trait_tec_gene_unity_2_effect:0 "§YRecombined trait§!"
 
-		trait_tec_gene_unity_3:0 ""
+		trait_tec_gene_unity_3:0 "§YC§! (§HIII§!)"
 		trait_tec_gene_unity_3_desc:0 ""
-		TRAIT_TEC_GENE_UNITY_3_EFFECT:0 ""
+		trait_tec_gene_unity_3_effect:0 "§HPerfected trait§!"
 
 		#leader_trait_tec_gene_unity:0 ""
 		#leader_trait_tec_gene_unity_desc:0 "§L.§!"
 	# /
 
 	# Fertility
-		trait_tec_gene_fertile_1:0 ""
+		trait_tec_gene_fertile_1:0 "§YA§! (§GI§!)"
 		trait_tec_gene_fertile_1_desc:0 ""
-		TRAIT_TEC_GENE_FERTILE_1_EFFECT:0 ""
+		trait_tec_gene_fertile_1_effect:0 "§GEngineered trait§!"
 
-		trait_tec_gene_fertile_2:0 ""
+		trait_tec_gene_fertile_2:0 "§YB§! (§YII§!)"
 		trait_tec_gene_fertile_2_desc:0 ""
-		TRAIT_TEC_GENE_FERTILE_2_EFFECT:0 ""
+		trait_tec_gene_fertile_2_effect:0 "§YRecombined trait§!"
 
-		trait_tec_gene_fertile_3:0 ""
+		trait_tec_gene_fertile_3:0 "§YC§! (§HIII§!)"
 		trait_tec_gene_fertile_3_desc:0 ""
-		TRAIT_TEC_GENE_FERTILE_3_EFFECT:0 ""
+		trait_tec_gene_fertile_3_effect:0 "§HPerfected trait§!"
 
 		#leader_trait_tec_gene_fertile:0 ""
 		#leader_trait_tec_gene_fertile_desc:0 "§L.§!"
 	# /
 
 	# Robust
-		trait_tec_gene_robust_1:0 ""
+		trait_tec_gene_robust_1:0 "§YA§! (§GI§!)"
 		trait_tec_gene_robust_1_desc:0 ""
-		TRAIT_TEC_GENE_ROBUST_1_EFFECT:0 ""
+		trait_tec_gene_robust_1_effect:0 "§GEngineered trait§!"
 
-		trait_tec_gene_robust_2:0 ""
+		trait_tec_gene_robust_2:0 "§YB§! (§YII§!)"
 		trait_tec_gene_robust_2_desc:0 ""
-		TRAIT_TEC_GENE_ROBUST_2_EFFECT:0 ""
+		trait_tec_gene_robust_2_effect:0 "§YRecombined trait§!"
 
-		trait_tec_gene_robust_3:0 ""
+		trait_tec_gene_robust_3:0 "§YC§! (§HIII§!)"
 		trait_tec_gene_robust_3_desc:0 ""
-		TRAIT_TEC_GENE_ROBUST_3_EFFECT:0 ""
+		trait_tec_gene_robust_3_effect:0 "§HPerfected trait§!"
 
 		#leader_trait_tec_gene_robust:0 ""
 		#leader_trait_tec_gene_robust_desc:0 "§L.§!"
 	# /
 
 	# Audacious
-		trait_tec_gene_audacious_1:0 ""
+		trait_tec_gene_audacious_1:0 "§YA§! (§GI§!)"
 		trait_tec_gene_audacious_1_desc:0 ""
-		TRAIT_TEC_GENE_AUDACIOUS_1_EFFECT:0 ""
+		trait_tec_gene_audacious_1_effect:0 "§GEngineered trait§!"
 
-		trait_tec_gene_audacious_2:0 ""
+		trait_tec_gene_audacious_2:0 "§YB§! (§YII§!)"
 		trait_tec_gene_audacious_2_desc:0 ""
-		TRAIT_TEC_GENE_AUDACIOUS_2_EFFECT:0 ""
+		trait_tec_gene_audacious_2_effect:0 "§YRecombined trait§!"
 
-		trait_tec_gene_audacious_3:0 ""
+		trait_tec_gene_audacious_3:0 "§YC§! (§HIII§!)"
 		trait_tec_gene_audacious_3_desc:0 ""
-		TRAIT_TEC_GENE_AUDACIOUS_3_EFFECT:0 ""
+		trait_tec_gene_audacious_3_effect:0 "§HPerfected trait§!"
 
 		#leader_trait_tec_gene_audacious:0 ""
 		#leader_trait_tec_gene_audacious_desc:0 "§L.§!"
