stab(ility) changes + fixes

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -1713,7 +1713,7 @@ tech_reverse_advanced_dome: " "
 	tec_gene_path.305.desc:0 "We have reached the maximum potential of biological and genetic evolution, as we have discovered the key to read and unlock the true potential of any organic genetic code in our galaxy, and probably far beyond. Any organic being inside [Root.GetName] is able to enjoy the best, unique and customized genetic changes.\n\nWe have forged our path to the future, cell to cell, dna strand to dna strand, and as a perfect species we will now thrive where no one did before."
 	tec_gene_path.305.a:0 "We are perfect."
 	tec_gene_path.305.a.tooltip:0 "Unlocks §YBiological Assimilation§!. Any organic species can be assimilated into new §Y[Root.Owner.Species.GetNamePlural]§!."
-
+ # /
  # Notification to other empires
 	tec_gene_path.30501.name:0 "[From.Capital.GetName] announces their ''Genetic Perfection''"
 	tec_gene_path.30501.desc:0 "Everyone on the galaxy has received a broadcast announcing the extreme changes taking places inside [From.GetName] colonies, as they declare a ''fully perfected body'' has been reached, and their genetic achievements are superior to anything already discovered.\n\nMany are curious and trying to watch themselves the new things they achieved, but rumors say they never return or, at least, not like they were before, and any claim is radically denied."
@@ -1721,14 +1721,33 @@ tech_reverse_advanced_dome: " "
 	tec_gene_path.30501.b:0 "Strange, and suspicious."
 	tec_gene_path.30501.c:0 "They will never outgrow our versatility."
 	tec_gene_path.30501.d:0 "We will incorporate their genetic material soon."
+ # /
+ # Resequence events - tutorial
+	tec_gene_path.400.name:0 "Recombined Perfection"
+	tec_gene_path.400.desc.regular:0 "TO DO."
+	tec_gene_path.400.desc.hive:0 "TO DO."
+	tec_gene_path.400.regular:0 "Prepare our Recombinators!"
+	tec_gene_path.400.regular.tooltip:0 ""
+	tec_gene_path.400.biohive:0 "Proceed - Weave the stored genetic material."
+	tec_gene_path.400.biohive.tooltip:0 ""
+	# 10% - select the first trait
+	tec_gene_path.40091.name:0 "Recombined Perfection"
+	tec_gene_path.40091.desc.regular:0 "TO DO."
+	tec_gene_path.40091.desc.hive:0 "TO DO."
+	tec_gene_path.40091.regular:0 "Prepare our Recombinators!"
+	tec_gene_path.40091.regular.tooltip:0 ""
+	tec_gene_path.40091.biohive:0 "Proceed - Weave the stored genetic material."
+	tec_gene_path.40091.biohive.tooltip:0 ""
 
+ # /
  # Other/not implemented
-	tec_gene_path.500.name:0 "Love Thyself"
-	tec_gene_path.500.desc:0 "Recently, one of our emigrant populations that went into [Root.GetName] territory sent strange news and messages; one specially was intercepted by our intelligence network with the maximum discretion.\nIt related the experience of a young [this.GetSpeciesName] who, fascinated by the genetic advancements of that empire, decided to join one of their Enhancements programs, and during some time all went good until one day the young [this.GetSpeciesName] completely vanished.\nSome time later, contact was retaken but ... wanted to show his new appearance and Enhancements to no one, ''It's just part of this, don't worry at all, you all should join this is wonderful!'' is the only thing said, but the family wanted to know the truth behind, so one day they saw what was unconceivable: their offspring was no longer a [this.GetSpeciesName], but a [Root.GetSpeciesNamePlural].\n\nImmediate psychological treatment has been ensure to the family in case they come back, but we should keep this out of the public until we can delve in what happens inside [Root.GetName]."
-	tec_gene_path.500.a:0 "Awesome genetic advancements, yet worrying."
-	tec_gene_path.500.b:0 "Truly concerning."
-	tec_gene_path.500.c:0 "This is an abomination, we must stop them now."
-
+	tec_gene_path.900.name:0 "Love Thyself"
+	tec_gene_path.900.desc:0 "Recently, one of our emigrant populations that went into [Root.GetName] territory sent strange news and messages; one specially was intercepted by our intelligence network with the maximum discretion.\nIt related the experience of a young [this.GetSpeciesName] who, fascinated by the genetic advancements of that empire, decided to join one of their Enhancements programs, and during some time all went good until one day the young [this.GetSpeciesName] completely vanished.\nSome time later, contact was retaken but ... wanted to show his new appearance and Enhancements to no one, ''It's just part of this, don't worry at all, you all should join this is wonderful!'' is the only thing said, but the family wanted to know the truth behind, so one day they saw what was unconceivable: their offspring was no longer a [this.GetSpeciesName], but a [Root.GetSpeciesNamePlural].\n\nImmediate psychological treatment has been ensure to the family in case they come back, but we should keep this out of the public until we can delve in what happens inside [Root.GetName]."
+	tec_gene_path.900.a:0 "Awesome genetic advancements, yet worrying."
+	tec_gene_path.900.b:0 "Truly concerning."
+	tec_gene_path.900.c:0 "This is an abomination, we must stop them now."
+ # /
+# /
 # Biological B BIOGENIC
 # ------------------------------------------------------------ namespace = tec_biogenic_path
  # Continues where the situation decides to embrace the tech - tec_gene_path.10085
