--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -225,6 +225,7 @@
 	tec_loc_leader:0 "$tec_loc_leader_icon$ Leader"
 	tec_loc_leaders:0 "$tec_loc_leader_icon$ Leaders"
 	tec_loc_leader_age:0 "$MOD_LEADER_AGE$"
+	tec_loc_all_leaders:0 "£governor£ £scientist£ £admiral£ £general£"
 
 	tec_loc_councilor_traits: "£council£ Councilor Traits"
 	tec_loc_normal_traits: "£noclass£ Normal Traits"
