--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -233,6 +233,14 @@
  tech_capital_productivity_2_effect:0 "Upgraded Capital Buildings:\n  $mod_planet_jobs_produces_mult$: §G+10%§!\n  $MOD_PLANETARY_ASCENSION_COST_MULT$: §G-10%§!"
  tech_capital_productivity_3_effect:0 "Major Capital Buildings:\n  $mod_planet_jobs_produces_mult$: §G+30%§!\n  $MOD_PLANETARY_ASCENSION_COST_MULT$: §G-15%§!"
 
+# DECISION REPLACES
+# ------------------------------------------------------------
+ decision_martial_law_effects_short:0 "Increases £stability£ §GStability§! and adds more §Y$job_soldier$§! jobs.\n\nReduces £job£ §RJob Resource Production§! and £mod_pop_growth_speed£ §RPop Growth§!.\n§YWill be automatically cancelled if the planet stability is over §R100%§! after a month§!."
+ decision_martial_law_hive_effects_short:0 "Increases £stability£ §GStability§! and adds more §Y$job_warrior_drone$§! jobs.\n\nReduces £job£ §RJob Resource Production§! and £mod_pop_growth_speed£ §RPop Growth§!.\n§YWill be automatically cancelled if the planet stability is over §R100%§! after a month§!."
+ decision_martial_law_machine_effects_short:0 "Increases £stability£ §GStability§! and adds more §Y$job_warrior_drone$§! jobs.\n\nReduces £job£ §RJob Resource Production§! and £mod_pop_growth_speed£ §RPop Growth§!.\n§YWill be automatically cancelled if the planet stability is over §R100%§! after a month§!."
+
+ decision_artifact_relays_hivemind_effect:0 "£job_synapse_drone£ §Y$job_synapse_drone_plural$§! on the planet each provide §G+1%§! Job Output and §G+1§! Stability."
+ decision_artifact_relays_machine_effect:0 "£job_coordinator£ §Y$job_coordinator_plural$§! on the planet each provide §G+1%§! Job Output and §G+1§! Stability."
 
 # EVENT replaces and additions
 # ------------------------------------------------------------
