--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -558,98 +558,98 @@
  # --------------- T2
 	# Main
 		trait_tec_gene_main_1:0 "§YTailored Genetics§! (§GI§!)"
-		trait_tec_gene_main_1_desc:0 "§LA.§!"
-		trait_tec_gene_main_1_effect:0 "§GEngineered trait§!"
+		trait_tec_gene_main_1_desc:0 "§LThis species is aspiring to create a perfectly tailored and maintained genetic code, which may allow it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
+		trait_tec_gene_main_1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 		trait_tec_gene_main_2:0 "§YImproved Genetics§! (§YII§!)"
-		trait_tec_gene_main_2_desc:0 "§LB.§!"
-		trait_tec_gene_main_2_effect:0 "§YRecombined trait§!"
+		trait_tec_gene_main_2_desc:0 "§LThis species possess the basis for a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
+		trait_tec_gene_main_2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 		trait_tec_gene_main_3:0 "§YGenetic Perfection§! (§HIII§!)"
-		trait_tec_gene_main_3_desc:0 "§LC.§!"
-		trait_tec_gene_main_3_effect:0 "§HPerfected trait§!"
+		trait_tec_gene_main_3_desc:0 "§LThis species has a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
+		trait_tec_gene_main_3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 	# /
 
 	# Brain
 		trait_tec_gene_research_1:0 "§YGenius§! (§GI§!)"
 		trait_tec_gene_research_1_desc:0 "§LThe intellect of this species is starting to become unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
-		trait_tec_gene_research_1_effect:0 "§GEngineered trait§!"
+		trait_tec_gene_research_1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£scientist£)§!"
 
 		trait_tec_gene_research_2:0 "§YGenius§! (§YII§!)"
 		trait_tec_gene_research_2_desc:0 "§LThe intellect of this species is becoming unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
-		trait_tec_gene_research_2_effect:0 "§YRecombined trait§!"
+		trait_tec_gene_research_2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses (£scientist£)§!"
 
-		trait_tec_gene_research_3:0 "§YC§! (§HIII§!)"
+		trait_tec_gene_research_3:0 "§YGenius§! (§HIII§!)"
 		trait_tec_gene_research_3_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only them can understand.§!"
-		trait_tec_gene_research_3_effect:0 "§HPerfected trait§!"
+		trait_tec_gene_research_3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 		#leader_trait_tec_gene_research:0 ""
 		#leader_trait_tec_gene_research_desc:0 "§L.§!"
 	# /
 
 	# Unity
-		trait_tec_gene_unity_1:0 "§YA§! (§GI§!)"
-		trait_tec_gene_unity_1_desc:0 ""
-		trait_tec_gene_unity_1_effect:0 "§GEngineered trait§!"
+		trait_tec_gene_unity_1:0 "§YResolved§! (§GI§!)"
+		trait_tec_gene_unity_1_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
+		trait_tec_gene_unity_1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£governor£)§!"
 
-		trait_tec_gene_unity_2:0 "§YB§! (§YII§!)"
-		trait_tec_gene_unity_2_desc:0 ""
-		trait_tec_gene_unity_2_effect:0 "§YRecombined trait§!"
+		trait_tec_gene_unity_2:0 "§YResolved§! (§YII§!)"
+		trait_tec_gene_unity_2_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
+		trait_tec_gene_unity_2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses (£governor£)§!"
 
-		trait_tec_gene_unity_3:0 "§YC§! (§HIII§!)"
-		trait_tec_gene_unity_3_desc:0 ""
-		trait_tec_gene_unity_3_effect:0 "§HPerfected trait§!"
+		trait_tec_gene_unity_3:0 "§YResolved§! (§HIII§!)"
+		trait_tec_gene_unity_3_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
+		trait_tec_gene_unity_3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 		#leader_trait_tec_gene_unity:0 ""
 		#leader_trait_tec_gene_unity_desc:0 "§L.§!"
 	# /
 
 	# Fertility
-		trait_tec_gene_fertile_1:0 "§YA§! (§GI§!)"
-		trait_tec_gene_fertile_1_desc:0 ""
-		trait_tec_gene_fertile_1_effect:0 "§GEngineered trait§!"
+		trait_tec_gene_fertile_1:0 "§YFecund§! (§GI§!)"
+		trait_tec_gene_fertile_1_desc:0 "§LThis species is radically altered to be naturally and artificially fertile and adapted to close social behaviors, feeling comfortable and developing close bounds being in proximity of other members of their own.§!"
+		trait_tec_gene_fertile_1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£governor£)§!"
 
-		trait_tec_gene_fertile_2:0 "§YB§! (§YII§!)"
-		trait_tec_gene_fertile_2_desc:0 ""
-		trait_tec_gene_fertile_2_effect:0 "§YRecombined trait§!"
+		trait_tec_gene_fertile_2:0 "§YFecund§! (§YII§!)"
+		trait_tec_gene_fertile_2_desc:0 "§LThis species is radically altered to be naturally and artificially fertile and adapted to close social behaviors, feeling comfortable and developing close bounds being in proximity of other members of their own.§!"
+		trait_tec_gene_fertile_2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses (£governor£)§!"
 
-		trait_tec_gene_fertile_3:0 "§YC§! (§HIII§!)"
-		trait_tec_gene_fertile_3_desc:0 ""
-		trait_tec_gene_fertile_3_effect:0 "§HPerfected trait§!"
+		trait_tec_gene_fertile_3:0 "§YFecund§! (§HIII§!)"
+		trait_tec_gene_fertile_3_desc:0 "§LThis species is radically altered to be naturally and artificially fertile and adapted to close social behaviors, feeling comfortable and developing close bounds being in proximity of other members of their own.§!"
+		trait_tec_gene_fertile_3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 		#leader_trait_tec_gene_fertile:0 ""
 		#leader_trait_tec_gene_fertile_desc:0 "§L.§!"
 	# /
 
 	# Robust
-		trait_tec_gene_robust_1:0 "§YA§! (§GI§!)"
-		trait_tec_gene_robust_1_desc:0 ""
-		trait_tec_gene_robust_1_effect:0 "§GEngineered trait§!"
+		trait_tec_gene_robust_1:0 "§YImpervious§! (§GI§!)"
+		trait_tec_gene_robust_1_desc:0 "§LNewly and additional Bio-Optimized organs aport this species with enhanced capabilities of survival, of resisting hazards and completing any possible (and near impossible) task.§!"
+		trait_tec_gene_robust_1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£general£)§!"
 
-		trait_tec_gene_robust_2:0 "§YB§! (§YII§!)"
-		trait_tec_gene_robust_2_desc:0 ""
-		trait_tec_gene_robust_2_effect:0 "§YRecombined trait§!"
+		trait_tec_gene_robust_2:0 "§YImpervious§! (§YII§!)"
+		trait_tec_gene_robust_2_desc:0 "§LNewly and additional Bio-Optimized organs aport this species with enhanced capabilities of survival, of resisting hazards and completing any possible (and near impossible) task.§!"
+		trait_tec_gene_robust_2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses (£general£)§!"
 
-		trait_tec_gene_robust_3:0 "§YC§! (§HIII§!)"
-		trait_tec_gene_robust_3_desc:0 ""
-		trait_tec_gene_robust_3_effect:0 "§HPerfected trait§!"
+		trait_tec_gene_robust_3:0 "§YImpervious§! (§HIII§!)"
+		trait_tec_gene_robust_3_desc:0 "§LNewly and additional Bio-Optimized organs aport this species with enhanced capabilities of survival, of resisting hazards and completing any possible (and near impossible) task.§!"
+		trait_tec_gene_robust_3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 		#leader_trait_tec_gene_robust:0 ""
 		#leader_trait_tec_gene_robust_desc:0 "§L.§!"
 	# /
 
 	# Audacious
-		trait_tec_gene_audacious_1:0 "§YA§! (§GI§!)"
-		trait_tec_gene_audacious_1_desc:0 ""
-		trait_tec_gene_audacious_1_effect:0 "§GEngineered trait§!"
+		trait_tec_gene_audacious_1:0 "§YAudacious§! (§GI§!)"
+		trait_tec_gene_audacious_1_desc:0 "§LCreative capacities of this species surpass the expected on perfection, making anything better with meticulous and precise work.§!"
+		trait_tec_gene_audacious_1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£scientist£ £admiral£)§!"
 
-		trait_tec_gene_audacious_2:0 "§YB§! (§YII§!)"
-		trait_tec_gene_audacious_2_desc:0 ""
-		trait_tec_gene_audacious_2_effect:0 "§YRecombined trait§!"
+		trait_tec_gene_audacious_2:0 "§YAudacious§! (§YII§!)"
+		trait_tec_gene_audacious_2_desc:0 "§LCreative capacities of this species surpass the expected on perfection, making anything better with meticulous and precise work.§!"
+		trait_tec_gene_audacious_2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses (£scientist£ £admiral£)§!"
 
-		trait_tec_gene_audacious_3:0 "§YC§! (§HIII§!)"
-		trait_tec_gene_audacious_3_desc:0 ""
-		trait_tec_gene_audacious_3_effect:0 "§HPerfected trait§!"
+		trait_tec_gene_audacious_3:0 "§YAudacious§! (§HIII§!)"
+		trait_tec_gene_audacious_3_desc:0 "§LCreative capacities of this species surpass the expected on perfection, making anything better with meticulous and precise work.§!"
+		trait_tec_gene_audacious_3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 		#leader_trait_tec_gene_audacious:0 ""
 		#leader_trait_tec_gene_audacious_desc:0 "§L.§!"
@@ -658,6 +658,18 @@
 	# Resequenced
 		# Note: adapted to chosen leviathan
 		#trait_tec_gene_resequenced_leviathan
+		# Increases output based on planet ascension
+		trait_tec_gene_resequenced_dragon:0 "§YDraconian Might§!"
+		trait_tec_gene_resequenced_dragon_desc:0 "§LThis species has recombined Stellar Draconic genetic material within its own DNA. With these strands, the capacity to endure diverse situations has increased tenfold, adapting the mind and body to persist no matter what adversity.§!"
+		trait_tec_gene_resequenced_dragon_effect:0 "§GResequenced trait§!"
+		# Generate rare resources 3x1
+		trait_tec_gene_resequenced_voidspawn:0 "§YAnomalous Organism§!"
+		trait_tec_gene_resequenced_voidspawn_desc:0 "§LThis species has recombined Voidspawn genetic material within its own DNA. This has allowed its organism to produce diverse elements that generally the Voidspawn would use for its development process.§!"
+		trait_tec_gene_resequenced_voidspawn_effect:0 "§GResequenced trait§!"
+		# 
+		trait_tec_gene_resequenced_tiyanki:0 "§YInterconnected Mentality§!"
+		trait_tec_gene_resequenced_tiyanki_desc:0 "§LThis species has recombined Tiyanki genetic material within its own DNA. TO DO.§!"
+		trait_tec_gene_resequenced_tiyanki_effect:0 "§GResequenced trait§!"
 		# Note: per archetype
 		#trait_tec_gene_resequenced_latent
 
