--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -1769,9 +1769,9 @@ l_english:
 	job_tec_broodlord_drone:0 "Brood Lord"
 	job_tec_broodlord_drone_plural:0 "Brood Lords"
 	job_tec_broodlord_drone_desc:0 "Specially breed and unique autonomous drones whose main function is securing and fertilizing broodqueens, having a increasingly high psyquic power under other categories of drones, and serving as literally mobile fortresses as they are extremely tough, powerful and cunning."
-	job_tec_broodlord_drone_effect_desc:0 "£job_tec_broodlord_drone£ $job_tec_broodlord_drone_plural$ increases §Y$tec_loc_stability$§! and spawn £defense_army£ §YDefense Armies§!."
+	job_tec_broodlord_drone_effect_desc:0 "£job_tec_broodlord_drone£ $job_tec_broodlord_drone_plural$ increases §Y$tec_loc_stability$§!, §Y$tec_loc_naval_cap$§! and spawn £defense_army£ §YDefense Armies§!."
 	#\n\n Each £job_tec_broodlord_drone£ $job_tec_broodlord_drone$ makes £job_tec_broodqueen_drone£ $job_tec_broodqueen_drone_plural$ increase its £pop£ §GOrganic pop assembly§! speed."
-	job_tec_broodlord_drone_effect_desc_growth:0 "£job_tec_broodlord_drone£ $job_tec_broodlord_drone_plural$ increases §Y$tec_loc_stability$§! and spawn £defense_army£ §YDefense Armies§!."
+	job_tec_broodlord_drone_effect_desc_growth:0 "£job_tec_broodlord_drone£ $job_tec_broodlord_drone_plural$ increases §Y$tec_loc_stability$§!, §Y$tec_loc_naval_cap$§! and spawn £defense_army£ §YDefense Armies§!."
 	#\n\n Each £job_tec_broodlord_drone£ $job_tec_broodlord_drone$ makes £job_tec_broodqueen_drone£ $job_tec_broodqueen_drone_plural$ increase its £pop£ §GOrganic Pop Growth§! speed."
 	mod_job_tec_broodlord_drone_add:0 "$job_tec_broodlord_drone$ Jobs"
 	mod_job_tec_broodlord_drone_per_pop:0 "§G+1§! $job_tec_broodlord_drone$ Job per $VALUE$ Pops"
@@ -1881,7 +1881,7 @@ l_english:
 	job_tec_prime_drone:0 "Prime Cluster"
 	job_tec_prime_drone_plural:0 "Prime Clusters"
 	job_tec_prime_drone_desc:0 "Highly specialized drones that represents a direct manifestation of the machine consciousness, primarily developed as a balanced way of controlling and amplifying the development of the collective as a whole."
-	job_tec_prime_drone_effect_desc:0 "£job_tec_prime_drone£ $job_tec_prime_drone_plural$ consume §Y$tec_loc_energy$§! for generating §Y$tec_loc_unity$§!, §Y$tec_loc_amenities_gestalt$§! and §Y$tec_loc_machine_processing$§!, increased by the §Y$tec_loc_capital_tier$§!."
+	job_tec_prime_drone_effect_desc:0 "£job_tec_prime_drone£ $job_tec_prime_drone_plural$ consume §Y$tec_loc_energy$§! for generating §Y$tec_loc_unity$§! and §Y$tec_loc_machine_processing$§!, increased by the §Y$tec_loc_capital_tier$§!."
 	mod_job_tec_prime_drone_add:0 "$job_tec_prime_drone$ Jobs"
 	mod_job_tec_prime_drone_per_pop:0 "§G+1§! £mod_job_tec_prime_drone_add£ $job_tec_prime_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_prime_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_prime_drone_add£ per $VALUE$ £pop£"
@@ -1889,13 +1889,13 @@ l_english:
 	job_tec_alpha_drone:0 "Alpha Cluster"
 	job_tec_alpha_drone_plural:0 "Alpha Clusters"
 	job_tec_alpha_drone_desc:0 "Highly specialized drones designed for controlling and ensuring administrative efficiency, by serving as living emitters of the will of the Machine Intelligence."
-	job_tec_alpha_drone_effect_desc:0 "£job_tec_alpha_drone£ $job_tec_alpha_drone_plural$ converts large amounts of §Y$tec_loc_research_resources$§! into §Y$tec_loc_admin_cap$§!, while also generating §Y$tec_loc_amenities_gestalt$§!"
+	job_tec_alpha_drone_effect_desc:0 "£job_tec_alpha_drone£ $job_tec_alpha_drone_plural$ converts large amounts of §Y$tec_loc_research_resources$§! into §Y$tec_loc_admin_cap$§!, increased by the §Y$tec_loc_capital_tier$§!."
 	mod_job_tec_alpha_drone_add:0 "$job_tec_alpha_drone$ Jobs"
 
 	job_tec_omega_drone:0 "Omega Cluster"
 	job_tec_omega_drone_plural:0 "Omegas Clusters"
 	job_tec_omega_drone_desc:0 "Highly specialized drones with the sole task of studying and finding new ways of avoiding stagnation or deceleration of the unitary development of the Machine Intelligence."
-	job_tec_omega_drone_effect_desc:0 "£job_tec_omega_drone£ $job_tec_omega_drone_plural$ converts large amounts of §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!, while also generating §Y$tec_loc_amenities_gestalt$§!"
+	job_tec_omega_drone_effect_desc:0 "£job_tec_omega_drone£ $job_tec_omega_drone_plural$ converts large amounts of §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!, increased by the §Y$tec_loc_capital_tier$§!."
 	mod_job_tec_omega_drone_add:0 "$job_tec_omega_drone$ Jobs"
 
 	job_tec_prime_performance_drone:0 "Performance Cluster"
@@ -1913,19 +1913,19 @@ l_english:
 	job_tec_prime_reimaginator_drone:0 "Reimaginator Cluster"
 	job_tec_prime_reimaginator_drone_plural:0 "Reimaginator Clusters"
 	job_tec_prime_reimaginator_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, constantly searching new drone forms that would suit assigned task better, or have more overall performance."
-	job_tec_prime_reimaginator_drone_effect_desc:0 "£job_tec_prime_reimaginator_drone£ $job_tec_prime_reimaginator_drone_plural$ uses large amounts of §Y$tec_loc_energy$§! and §Y$tec_loc_alloys$§! for assembling £job_roboticist£ §YPops§!, and producing §Y$tec_loc_unity$§!, §Y$tec_loc_amenities_gestalt$§! and §Y$tec_loc_machine_processing$§!, increased by the §Y$tec_loc_capital_tier$§!"
+	job_tec_prime_reimaginator_drone_effect_desc:0 "£job_tec_prime_reimaginator_drone£ $job_tec_prime_reimaginator_drone_plural$ uses large amounts of §Y$tec_loc_energy$§! and §Y$tec_loc_alloys$§! for assembling £job_roboticist£ §YPops§!, also producing §Y$tec_loc_unity$§! and §Y$tec_loc_machine_processing$§!, increased by the §Y$tec_loc_capital_tier$§!"
 	mod_job_tec_prime_reimaginator_drone_add:0 "$job_tec_prime_reimaginator_drone$ Jobs"
 
 	job_tec_prime_debugger_drone:0 "Debugger Cluster"
 	job_tec_prime_debugger_drone_plural:0 "Debugger Cluster"
 	job_tec_prime_debugger_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, and constantly monitor programming code of the whole collective seeking possible corruption or deviancy."
-	job_tec_prime_debugger_drone_effect_desc:0 "£job_tec_prime_debugger_drone£ $job_tec_prime_debugger_drone_plural$ uses large amounts of §Y$tec_loc_energy$§! for greatly reducing §Y$tec_loc_crime_gestalt$§! and generating §Y$tec_loc_unity$§!, §Y$tec_loc_amenities_gestalt$§! and §Y$tec_loc_machine_processing$§!, increased by the §Y$tec_loc_capital_tier$§!"
+	job_tec_prime_debugger_drone_effect_desc:0 "£job_tec_prime_debugger_drone£ $job_tec_prime_debugger_drone_plural$ uses large amounts of §Y$tec_loc_energy$§! for greatly reducing §Y$tec_loc_crime_gestalt$§!, also generating §Y$tec_loc_unity$§! and §Y$tec_loc_machine_processing$§!, increased by the §Y$tec_loc_capital_tier$§!"
 	mod_job_tec_prime_debugger_drone_add:0 "$job_tec_prime_debugger_drone$ Jobs"
 
 	job_tec_prime_warform_drone:0 "Warform Cluster"
 	job_tec_prime_warform_drone_plural:0 "Warform Cluster"
 	job_tec_prime_warform_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, being mobile platforms of control, defense and attack that protects the primary nexus of the planet with high efficiency, while also coordinating external fleet movements on the fly."
-	job_tec_prime_warform_drone_effect_desc:0 "£job_tec_prime_warform_drone£ $job_tec_prime_warform_drone_plural$ uses large amounts of §Y$tec_loc_energy$§! for increasing §Y$tec_loc_naval_cap$§!, spawning £defense_army£ §Y$tec_warform_def_plural$§! and generating §Y$tec_loc_unity$§!, §Y$tec_loc_amenities_gestalt$§! and §Y$tec_loc_machine_processing$§!, increased by the §Y$tec_loc_capital_tier$§!"
+	job_tec_prime_warform_drone_effect_desc:0 "£job_tec_prime_warform_drone£ $job_tec_prime_warform_drone_plural$ uses large amounts of §Y$tec_loc_energy$§! for increasing §Y$tec_loc_naval_cap$§!, spawning £defense_army£ §Y$tec_warform_def_plural$§!, also generating §Y$tec_loc_unity$§! and §Y$tec_loc_machine_processing$§!, increased by the §Y$tec_loc_capital_tier$§!"
 	mod_job_tec_prime_warform_drone_add:0 "$job_tec_prime_warform_drone$ Jobs"
  # /
 
