--- a/localisation/english/zz_evolved_leaders_l_english.yml
+++ b/localisation/english/zz_evolved_leaders_l_english.yml
@@ -195,17 +195,17 @@
 # ------------------------------------------------- Cyberocrats
 	tec_leader_cyberocrat_official_n_NAME:0 "C-Alpha 200A"
 	tec_leader_cyberocrat_official_n_TITLE:0 "Cyberocrat"
-	tec_leader_cyberocrat_official_n_DESC:0 "C-Alpha 0A is a Cyberocrat §Y$tec_loc_official$§! from Cyberocrat mobile world. A perfectly engineered cybernetic clone designed solely to control and improve governing affairs."
+	tec_leader_cyberocrat_official_n_DESC:0 "C-Alpha 0A is a Cyberocrat §Y$tec_loc_leader_official$§! from Cyberocrat mobile world. A perfectly engineered cybernetic clone designed solely to control and improve governing affairs."
 	tec_leader_cyberocrat_official_n_INTRO:0 "§HTelemetry systems have been temporarily deactivated by the presence of the Cyberocrat - Their encryption is too strong to be bypassed§!\n\nThe Cyberocrats have estimated your request as acceptable, and I have been assigned to improve the performance of your empire.\nC-Alpha individual receptive to your input during the next galactic cycle."
 
 	tec_leader_cyberocrat_commander_n_NAME:0 "C-Alpha 200B"
 	tec_leader_cyberocrat_commander_n_TITLE:0 "Cyberocrat"
-	tec_leader_cyberocrat_commander_n_DESC:0 "C-Alpha 0B is a Cyberocrat §Y$tec_loc_commander$§! from Cyberocrat Autonomous World. A perfectly engineered cybernetic clone designed solely to improve fleet and combat tactics."
+	tec_leader_cyberocrat_commander_n_DESC:0 "C-Alpha 0B is a Cyberocrat §Y$tec_loc_leader_commander$§! from Cyberocrat Autonomous World. A perfectly engineered cybernetic clone designed solely to improve fleet and combat tactics."
 	tec_leader_cyberocrat_commander_n_INTRO:0 "$tec_leader_cyberocrat_official_n_INTRO$"
 
 	tec_leader_cyberocrat_scientist_n_NAME:0 "C-Alpha 200C"
 	tec_leader_cyberocrat_scientist_n_TITLE:0 "Cyberocrat"
-	tec_leader_cyberocrat_scientist_n_DESC:0 "C-Alpha 0C is a Cyberocrat §Y$tec_loc_scientist$§! from Cyberocrat Autonomous World. A perfectly engineered cybernetic clone designed solely to technological creation and development."
+	tec_leader_cyberocrat_scientist_n_DESC:0 "C-Alpha 0C is a Cyberocrat §Y$tec_loc_leader_scientist$§! from Cyberocrat Autonomous World. A perfectly engineered cybernetic clone designed solely to technological creation and development."
 	tec_leader_cyberocrat_scientist_n_INTRO:0 "$tec_leader_cyberocrat_official_n_INTRO$"
 
 # ------------------------------------------------- Rogue AIS
