--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -27,6 +27,9 @@ l_english:
 
  # Utilities
 	tec_building_ascension_scaling:0 "\n\nThe number of §Y$tec_loc_planet_ascensions$§! of this colony increase some of the effects of this building.\n\n"
+	tec_building_ascension_scaling_leader_official:0 "\n\nEach §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_official$§!.\n\n"
+	tec_building_ascension_scaling_leader_commander:0 "\n\nEach §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_commander$§!.\n\n"
+	tec_building_ascension_scaling_leader_scientist:0 "\n\nEach §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_scientist$§!.\n\n"
  # /
 
  # Job icons
