--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -226,6 +226,9 @@
 	tec_loc_leaders:0 "$tec_loc_leader_icon$ Leaders"
 	tec_loc_leader_lifespan:0 "$MOD_LEADER_LIFESPAN$"
 	tec_loc_all_leaders:0 "£official£ £scientist£ £commander£"
+	tec_loc_leader_official:0 "£official£ Official"
+	tec_loc_leader_commander:0 "£commander£ Commander"
+	tec_loc_leader_scientist:0 "£scientist£ Scientist"
 
 	tec_loc_councilor_traits: "£council£ Councilor Traits"
 	tec_loc_normal_traits: "£noclass£ Normal Traits"
