--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -27,9 +27,9 @@ l_english:
 
  # Utilities
 	tec_building_ascension_scaling:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency:§!\n- The number of §Y$tec_loc_planet_ascensions$§! of this colony increase some of the effects of this building.\n\n"
-	tec_building_ascension_scaling_leader_official:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency:§!\n- Each §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_official$§!.\n\n"
-	tec_building_ascension_scaling_leader_commander:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency:§!\n- Each §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_commander$§!.\n\n"
-	tec_building_ascension_scaling_leader_scientist:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency:§!\n- Each §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_scientist$§!.\n\n"
+	tec_building_ascension_scaling_leader_official:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency:§!\n- Every §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_official$§!.\n\n"
+	tec_building_ascension_scaling_leader_commander:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency:§!\n- Every §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_commander$§!.\n\n"
+	tec_building_ascension_scaling_leader_scientist:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency:§!\n- Every §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_scientist$§!.\n\n"
  # /
 
  # Job icons
@@ -2926,13 +2926,13 @@ l_english:
 		job_tec_naval_operator:0 "Naval Operator"
 		job_tec_naval_operator_plural:0 "$job_tec_naval_operator$s"
 		job_tec_naval_operator_desc:0 "Various Corps of specialized and high-ranking soldiers serving the empire navy, doing daily training tasks and ensuring a perfect operational status on mothballed and ready fleet assets."
-		job_tec_naval_operator_effect_desc:0 "£job_tec_naval_operator£ $job_tec_naval_operator_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! and spawn £defense_army£ §YDefense Armies§!."
+		job_tec_naval_operator_effect_desc:0 "£job_tec_naval_operator£ $job_tec_naval_operator_plural$ convert $tec_loc_cgs$ and $tec_loc_alloys$ into §Y$tec_loc_naval_cap$§!, also spawning §Y$tec_loc_defense_armies$§!."
 		mod_job_tec_naval_operator_add:0 "$job_tec_naval_operator$ Jobs"
 
 		job_tec_naval_operator_drone:0 "Naval Drone"
 		job_tec_naval_operator_drone_plural:0 "Naval Drones"
 		job_tec_naval_operator_drone_desc:0 "Highly specialized drones with the only task of serving as powerful naval operators and relays for other subdrones, both at a planetary scale and during fleet movements, greatly boosting gestalt naval operations."
-		job_tec_naval_operator_drone_effect_desc:0 "£job_tec_naval_operator_drone£ $job_tec_naval_operator_drone_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! and spawn £defense_army£ §YDefense Armies§!."
+		job_tec_naval_operator_drone_effect_desc:0 "£job_tec_naval_operator_drone£ $job_tec_naval_operator_drone_plural$ convert $tec_loc_basic_resources$ and $tec_loc_alloys$ into §Y$tec_loc_naval_cap$§!, also spawning spawning §Y$tec_loc_defense_armies$§!."
 		mod_job_tec_naval_operator_drone_add:0 "$job_tec_naval_operator_drone$ Jobs"
 
 		job_tec_shipyard_technician:0 "Shipyard Technician"
