--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -151,6 +151,8 @@
 	sm_naval_logistics_office_desc_modifier:2 "Anchorages: §G+2.5%§! extra $tec_loc_navalcap_from_jobs$"
 
 
+	tec_anchorage_navalcap: "Provided $tec_loc_navalcap_from_jobs$ affects the system where the Anchorage is built"
+
 	# Cordyceptic
 		sm_cordyceptic_reanimation_facility:0 "Cordyceptic Reanimation Facility"
 		sm_cordyceptic_reanimation_facility_desc:0 "§LNormally we have to find recently-dead subjects for our reanimation practices, but with a spawning system we can either infiltrate them at an earlier stage and have a steady supply of hosts, or cultivate residual life for later infestation.§!\n"
