--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -91,6 +91,7 @@ l_english:
 		building_institute_desc:0 "Monumental technological efforts and discoveries are done here, as result of the focus of dedicated innovators and cutting-edge instrumental, leading the rest of the empire research efforts."
 
 		building_tec_regular_research_booster_1:0 "Research Institute"
+		building_tec_regular_research_booster_1_plural:0 "Research Institutes"
 		building_tec_regular_research_booster_1_desc:0 "The Research Institute is a massive complex, gathering the cutting edges of disparate fields together for unprecedented synergy, improving the research output of the whole planet."
 	# /
 	# Unity
@@ -98,18 +99,21 @@ l_english:
 		building_autocurating_vault_desc:0 "A highly-specialized computerized network central serving as the cornerstone of the empire for cultural, social and political development."
 
 		building_tec_regular_unity_booster_1:0 "Autocurating Vault"
+		building_tec_regular_unity_booster_1_plural:0 "Autocurating Vaults"
 		building_tec_regular_unity_booster_1_desc:0 "A highly-specialized computerized network constantly acquires, analyzes, evaluates, and puts on display everyday artifacts it deems to be significant, creating a living museum of the present."
 
 		building_citadel_of_faith:0 "Ministry of Faith"
 		building_citadel_of_faith_desc:0 "A highly-specialized computerized network central serving as the cornerstone of the empire for cultural, social and political development."
 
 		building_tec_spiritualist_unity_booster_1:0 "Citadel of Faith"
+		building_tec_spiritualist_unity_booster_1_plural:0 "Citadels of Faith"
 		building_tec_spiritualist_unity_booster_1_desc:0 "A massive complex offering refuge and seclusion from the material world, for all comers."
 
 		building_corporate_vault:0 "Ministry of Finances"
 		building_corporate_vault_desc:0 "A highly-specialized computerized network central serving as the cornerstone of the empire for cultural, economical and political development."
 
-		building_tec_corporate_unity_booster_1:0 "Vault of Acquisitions"
+		building_tec_corporate_unity_booster_1:0 "Acquisition Vault"
+		building_tec_corporate_unity_booster_1_plural:0 "Acquisitions Vault"
 		building_tec_corporate_unity_booster_1_desc:0 "An enormous underground vault that serves the dual purpose of business coordination site and public museum to the long and profitable history of the Megacorporation that built it."
 	# /
 	# Naval
@@ -120,6 +124,7 @@ l_english:
 		building_military_academy_desc:1 "The central bureau of military operations, improving the efficiency of the empire as a whole from advanced installations, munitions labs and parabellum industrial controls."
 
 		building_tec_regular_military_booster_1:0 "Strategic Garrison"
+		building_tec_regular_military_booster_1_plural:0 "Strategic Garrisons"
 		building_tec_regular_military_booster_1_desc:1 "A mix of military academies and tactical stations and garrisons that improve local recruitment rates and offer a higher standard of training and naval coverage."
 	# /
  # /
@@ -236,6 +241,7 @@ l_english:
 		building_supercomputer_desc:0 "A single colossal supercomputer which can carry out incredibly complex calculations, improving the research development of the empire."
 
 		building_tec_gestalt_research_booster_1:0 "Planetary Supercomputer"
+		building_tec_gestalt_research_booster_1_plural:0 "Planetary Supercomputers"
 		building_tec_gestalt_research_booster_1_desc:0 "A massive supercomputer connected with the research network of the empire transferring and relaying incredible technological data, improving the local research efforts."
 
 		building_tec_gestalt_military_academy:0 "Central Command"
@@ -271,9 +277,11 @@ l_english:
 		building_tec_hive_research_lab_3_desc:0 "$building_research_lab_3_desc$"
 
 		building_tec_hive_research_booster_1:0 "Innovation Central"
+		building_tec_hive_research_booster_1_plural:0 "Innovation Centrals"
 		building_tec_hive_research_booster_1_desc:0 "These installations serve as the central place for the development of new technologies and knowledge on this colony."
 
 		building_tec_hive_research_booster_2:0 "Innovation Nexus"
+		building_tec_hive_research_booster_2_plural:0 "Innovation Nexi"
 		building_tec_hive_research_booster_2_desc:0 "These installations serve as the central place for the development of new technologies and knowledge on this colony."
 
 		building_tec_hive_supercomputer:0 "$building_supercomputer$"
@@ -514,9 +522,11 @@ l_english:
 		building_tec_biohive_research_lab_3_desc:0 "Giant neurological processors host millions of calculations and thoughts through a complex network of secondary brains, transmitted from and to the drones and collective itself."
 
 		building_tec_biohive_research_booster_1:0 "Planetary Bio-Brain"
+		building_tec_biohive_research_booster_1_plural:0 "Planetary Bio-Brains"
 		building_tec_biohive_research_booster_1_desc:0 "This giant neural mass conforms a direct extension of the intellect of the collective, coordinating the acquisition and transmission of information, data and innovations."
 
 		building_tec_biohive_research_booster_2:0 "Sentient Bio-Brain"
+		building_tec_biohive_research_booster_2_plural:0 "Sentient Bio-Brains"
 		building_tec_biohive_research_booster_2_desc:0 "This giant neural mass conforms a direct extension of the intellect of the collective, coordinating the acquisition and transmission of information, data and innovations."
 
 		building_tec_biohive_supercomputer:0 "Sapiential Cortex"
@@ -586,9 +596,11 @@ l_english:
 		building_tec_biohive_factory_3_desc:0 "Adapted to create a pattern, this biological industry reproduces high-quality elements from basic materials"
 
 		building_tec_biohive_industrial_booster_1:0 "Industrial Neuro-Gland"
+		building_tec_biohive_industrial_booster_1_plural:0 "Industrial Neuro-Glands"
 		building_tec_biohive_industrial_booster_1_desc:0 "An amalgam of macro-neural transmitters specifically tailored and created to improve the production of industrial materials."
 
 		building_tec_biohive_strategic_booster_1:0 "Strategic Cerebellum"
+		building_tec_biohive_strategic_booster_1_plural:0 "Strategic Cerebellums"
 		building_tec_biohive_strategic_booster_1_desc:0 "An amalgam of macro-neural transmitters specifically tailored and created to improve the production of strategic resources."
 	# /
 	# --------------- Rare resources
@@ -645,6 +657,7 @@ l_english:
 		building_tec_biohive_military_academy_desc:0 "All the collective naval and military assets are interconnected and their neural processes are allocated to this structure, improving efficiency."
 
 		building_tec_biohive_military_booster_1:0 "Aggro-Lymphatic Accelerator"
+		building_tec_biohive_military_booster_1_plural:0 "Aggro-Lymphatic Accelerators"
 		building_tec_biohive_military_booster_1_desc:0 "This biostructure serves as home and accelerator of new breeds of biomorph warrior and naval drones, which receive new conditioning to improve their performance on battle and tactical control."
 
 	# /
@@ -807,6 +820,7 @@ l_english:
 		building_alpha_hub_desc:0 "The nerve center of all intra-communication that occurs between the quintillions of semi-sapient systems that administers our empire."
 
 		building_tec_machine_unity_booster_1:0 "Alpha Relay"
+		building_tec_machine_unity_booster_1_plural:0 "Alpha Relays"
 		building_tec_machine_unity_booster_1_desc:0 "This installation provides a constant and polished network of intra and extra-communication within the colony."
 	# /
  # /
@@ -2926,13 +2940,13 @@ l_english:
 		job_tec_naval_operator:0 "Naval Operator"
 		job_tec_naval_operator_plural:0 "$job_tec_naval_operator$s"
 		job_tec_naval_operator_desc:0 "Various Corps of specialized and high-ranking soldiers serving the empire navy, doing daily training tasks and ensuring a perfect operational status on mothballed and ready fleet assets."
-		job_tec_naval_operator_effect_desc:0 "£job_tec_naval_operator£ $job_tec_naval_operator_plural$ convert $tec_loc_cgs$ and $tec_loc_alloys$ into §Y$tec_loc_naval_cap$§!, also spawning §Y$tec_loc_defense_armies$§!."
+		job_tec_naval_operator_effect_desc:0 "£job_tec_naval_operator£ $job_tec_naval_operator_plural$ turn $tec_loc_cgs$ and $tec_loc_alloys$ into §Y$tec_loc_naval_cap$§!, also spawning §Y$tec_loc_defense_armies$§!."
 		mod_job_tec_naval_operator_add:0 "$job_tec_naval_operator$ Jobs"
 
 		job_tec_naval_operator_drone:0 "Naval Drone"
 		job_tec_naval_operator_drone_plural:0 "Naval Drones"
 		job_tec_naval_operator_drone_desc:0 "Highly specialized drones with the only task of serving as powerful naval operators and relays for other subdrones, both at a planetary scale and during fleet movements, greatly boosting gestalt naval operations."
-		job_tec_naval_operator_drone_effect_desc:0 "£job_tec_naval_operator_drone£ $job_tec_naval_operator_drone_plural$ convert $tec_loc_basic_resources$ and $tec_loc_alloys$ into §Y$tec_loc_naval_cap$§!, also spawning spawning §Y$tec_loc_defense_armies$§!."
+		job_tec_naval_operator_drone_effect_desc:0 "£job_tec_naval_operator_drone£ $job_tec_naval_operator_drone_plural$ turn $tec_loc_basic_resources$ and $tec_loc_alloys$ into §Y$tec_loc_naval_cap$§!, also spawning spawning §Y$tec_loc_defense_armies$§!."
 		mod_job_tec_naval_operator_drone_add:0 "$job_tec_naval_operator_drone$ Jobs"
 
 		job_tec_shipyard_technician:0 "Shipyard Technician"
