more ethic changes + gene perf fix

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -658,7 +658,7 @@
 
 			policy_option_tec_pluralist_A:0 "$ethic_pluralist$ Preparation"
 			policy_option_tec_pluralist_A_name:0 "$policy_option_tec_pluralist_A$"
-			policy_option_tec_pluralist_A_desc:0 "All available resources must be provided for our guiding hands and those who aspire to be like them to thrive and go forward.\n\n§EThis policy is focused on §HPluralist Improvement§!§!"
+			policy_option_tec_pluralist_A_desc:0 "All available resources must be provided for our guiding hands and those who aspire to be like them to thrive and go forward.\n\n§EThis policy is focused on §HPluralist Improvement§!§!\nIncreased §YPassive§! experience for leaders."
 
 			policy_option_fanatic_tec_pluralist_A:0 "$policy_option_tec_pluralist_A$"
 			policy_option_fanatic_tec_pluralist_A_name:0 "$policy_option_tec_pluralist_A$"
@@ -679,6 +679,30 @@
 			policy_option_fanatic_tec_pluralist_C:0 "$policy_option_tec_pluralist_C$"
 			policy_option_fanatic_tec_pluralist_C_name:0 "$policy_option_tec_pluralist_C$"
 			policy_option_fanatic_tec_pluralist_C_desc:0 "$policy_option_tec_pluralist_C_desc$"
+
+			#policy_option_tec_cooperative_state_workers_restrict:0 "Restrict State Workers"
+			#policy_option_tec_cooperative_state_workers_restrict_name:0 "$policy_option_tec_cooperative_state_workers_restrict$"
+			#policy_option_tec_cooperative_state_workers_restrict_desc:0 "While public employment is a benefit for the empire, we must redirect unemployment towards more urgent means of production.\n\n§E£job_tec_state_worker£ State workers jobs will be §HDisabled§!, except on planets with £building£ §HState Agency§!, §HAid Center§! or §HEducation Center§! buildings present§!"
+			policy_tec_pluralist_leader_cap_policy:0 "Pluralist Leadership"
+			policy_tec_pluralist_leader_cap_policy_desc:0 "We will ensure our empire allows those who want to shine to bright intensely, we will provide our population, colonies and armada worthy leaders, worthy commanders, worthy governors."
+			policy_option_tec_pluralist_leader_cap_official_name:0 "Increased $tec_loc_leader_official$ Capacity"
+			policy_option_tec_pluralist_leader_cap_official_desc:0 ""
+			policy_option_tec_pluralist_leader_cap_official:0 "$policy_option_tec_pluralist_leader_cap_official_name$"
+			policy_option_tec_fanatic_pluralist_leader_cap_official_name:0 "Increased $tec_loc_leader_official$ Capacity"
+			policy_option_tec_fanatic_pluralist_leader_cap_official_desc:0 ""
+			policy_option_tec_fanatic_pluralist_leader_cap_official:0 "$policy_option_tec_fanatic_pluralist_leader_cap_official_name$"
+			policy_option_tec_pluralist_leader_cap_commander_name:0 "Increased $tec_loc_leader_commander$ Capacity"
+			policy_option_tec_pluralist_leader_cap_commander_desc:0 ""
+			policy_option_tec_pluralist_leader_cap_commander:0 "$policy_option_tec_pluralist_leader_cap_commander_name$"
+			policy_option_tec_fanatic_pluralist_leader_cap_commander_name:0 "Increased $tec_loc_leader_commander$ Capacity"
+			policy_option_tec_fanatic_pluralist_leader_cap_commander_desc:0 ""
+			policy_option_tec_fanatic_pluralist_leader_cap_commander:0 "$policy_option_tec_fanatic_pluralist_leader_cap_commander_name$"
+			policy_option_tec_pluralist_leader_cap_scientist_name:0 "Increased $tec_loc_leader_scientist$ Capacity"
+			policy_option_tec_pluralist_leader_cap_scientist_desc:0 ""
+			policy_option_tec_pluralist_leader_cap_scientist:0 "$policy_option_tec_pluralist_leader_cap_scientist_name$"
+			policy_option_tec_fanatic_pluralist_leader_cap_scientist_name:0 "Increased $tec_loc_leader_scientist$ Capacity"
+			policy_option_tec_fanatic_pluralist_leader_cap_scientist_desc:0 ""
+			policy_option_tec_fanatic_pluralist_leader_cap_scientist:0 "$policy_option_tec_fanatic_pluralist_leader_cap_scientist_name$"
 
 		#- Gestalt Empathy
 		# /
