--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -464,6 +464,8 @@
 	TEC_TAG_ELITIST_BONUS_EDICT:0 "$TEC_TAG_BONUS_EDICT$ Can use ['concept_tec_edict_tec_elite_boosting_alias_icon'] Edict"
 	TEC_TAG_FANATIC_ELITIST_BONUS_MECHANIC_LESS_NEGATIVES:0 "$TEC_TAG_BONUS_MECHANIC$ Leaders have a §G50%§! reduced chance of gaining a §YNegative Trait§!"
 	TEC_TAG_ELITIST_BONUS_MECHANIC_LESS_NEGATIVES:0 "$TEC_TAG_BONUS_MECHANIC$ Leaders have a §G25%§! reduced chance of gaining a §YNegative Trait§!"
+	TEC_TAG_ELITIST_BONUS_MECHANIC_EXTRA_TRAIT:0 "$TEC_TAG_BONUS_MECHANIC$ Hired leaders have a §G25%§! chance of gaining a random §YPositive Trait§!"
+	TEC_TAG_FANATIC_ELITIST_BONUS_MECHANIC_EXTRA_TRAIT:0 "$TEC_TAG_BONUS_MECHANIC$ Hired leaders have a §G50%§! chance of gaining a random §YPositive Trait§!"
 
 	# Pluralist
 	ethic_pluralist:0 "Pluralist"
@@ -478,13 +480,16 @@
 	ethic_fanatic_pluralist_desc:0 "§LWe are all of us worthy of the same dignity and the same basic respect, for within each of us lies the potential for greatness, for a stroke of luck or genius, for the very salvation of our species. Yes, we are not all created equal, but what does that matter when we are equally endowed with the capacity to create?§!\n"
 
 	TEC_ETHIC_ALLOWS_EQUALITY_EDICT:0 "§EAllows §HEqual opportunities§! Edict§!"
-	TEC_ETHIC_ALLOWS_LEADER_XP:0 "§EAll leaders will gain a §HSmall§! amount of experience yearly, §HDoubled§! for actively employed leaders, up to level §H3§!.§!"
+	TEC_ETHIC_ALLOWS_LEADER_XP:0 "§EAll leaders will gain a §YSmall§! amount of §HPassive Experience§! yearly, §HDoubled§! for actively employed leaders."
+	TEC_FAN_ETHIC_ALLOWS_LEADER_XP:0 "§EAll leaders will gain a §YModerate§! amount of §HPassive Experience§! yearly, §HDoubled§! for actively employed leaders."
 	TEC_ETHIC_FORBIDS_MEGACORP:0 "§EForbid §HCorporate§! Authorities§!"
 
 	TEC_TAG_PLURALIST_BONUS_LIVING_STANDARD_UTOPIAN:0 "$TEC_TAG_BONUS_LIVING_STANDARD$ Can use ['concept_tec_living_standard_utopian_alias_icon'] Living Standards"
 	TEC_TAG_PLURALIST_BONUS_EDICT:0 "$TEC_TAG_BONUS_EDICT$ Can use ['concept_tec_edict_tec_equal_opportunities_alias_icon'] Edict"
-	TEC_TAG_PLURALIST_BONUS_MECHANIC_PASSIVE_EXP:0 "$TEC_TAG_BONUS_MECHANIC$ Leaders gain a small amount of §YMonthly Experience§! up to §GLevel 3§!. Non active leaders gain double the amount"
-	TEC_TAG_FANATIC_PLURALIST_BONUS_MECHANIC_PASSIVE_EXP:0 "$TEC_TAG_BONUS_MECHANIC$ Leaders gain a small amount of §YMonthly Experience§! up to §GLevel 6§!. Non active leaders gain double the amount"
+	TEC_TAG_PLURALIST_BONUS_MECHANIC_PASSIVE_EXP:0 "$TEC_TAG_BONUS_MECHANIC$ Leaders gain a §YSmall§! amount of §YMonthly Experience§!. Non active leaders gain double the amount"
+	TEC_TAG_FANATIC_PLURALIST_BONUS_MECHANIC_PASSIVE_EXP:0 "$TEC_TAG_BONUS_MECHANIC$ Leaders gain a §YModerate§! amount of §YMonthly Experience§!. Non active leaders gain double the amount"
+	TEC_TAG_PLURALIST_BONUS_SELECTABLE_LEADER_CAP:0 "$TEC_TAG_BONUS_MECHANIC$ Allows the selection of §G+1§! §Y$tec_loc_all_leaders$ Leader capacity§! of a specific leader type via policy."
+	TEC_TAG_FANATIC_PLURALIST_BONUS_SELECTABLE_LEADER_CAP:0 "$TEC_TAG_BONUS_MECHANIC$ Allows the selection of §G+2§! §Y$tec_loc_all_leaders$ Leader capacity§! of a specific leader type via policy."
 
 	# Not added
 	ethic_individualist_desc:1 "§LEveryone is equal in basic dignity and rights. The preservation of order, while an admirable goal, does not justify tyranny and oppression either in principle or in practice. Civilization flourishes best when the few do not dominate the many.§!\n"
